source_set("cocoa") {
  sources = [
    "GLLayer.mm",
    "GLView.mm",
    "WindowController.mm",
    "app.mm",
    "displaygl.mm",
    "window.mm",

    # TODO: Create abstract `FunctionsGL` class and have a derived `FunctionsCGL` class.
    "functions_gl.mm",
  ]

  frameworks = [
    "Cocoa.framework",
    "QuartzCore.framework",
    "OpenGL.framework",
  ]
  defines = [ "GL_SILENCE_DEPRECATION" ]
}
