import("//build/config/linux/pkg_config.gni")

source_set("gtk") {
  sources = [
    "app_linux.cc",
    "main_window.cc",
  ]

  libs = [
    "EGL",
    "GL",
  ]

  public_configs = [ ":gtk3" ]

  public_deps = [ "//third_party/glad" ]
}

pkg_config("gtk3") {
  packages = [
    "gtk+-3.0",
    "glib-2.0",
  ]
}
