source_set("renderer") {
  sources = [
    "atlas.cc",
    "glyph_cache.cc",
    "line_layout_cache.cc",
    "rect_renderer.cc",
    "renderer.cc",
    "selection_renderer.cc",
    "shader.cc",
    "text_renderer.cc",

    # TODO: Remove this.
    "renderer_lite.cc",
  ]

  deps = [
    "icons",
    "//base/filesystem",
    "//font",
    "//third_party/fmt",
    "//third_party/libjpeg",
    "//third_party/libspng",
  ]
}
