source_set("renderer") {
  sources = [
    "atlas.cc",
    "line_layout_cache.cc",
    "rect_renderer.cc",
    "renderer.cc",
    "selection_renderer.cc",
    "shader.cc",
    "texture_cache.cc",
    "texture_renderer.cc",
  ]

  deps = [
    "icons",
    "//base",
    "//font",
    "//third_party/fmt",
    "//third_party/libjpeg",
    "//third_party/libspng",
  ]
}
